--- a/spring-boot-file-upload/src/main/resources/static/index.html
+++ b/spring-boot-file-upload/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>File Upload</h3>
-<form action="upload" method="post" enctype="multipart/form-data">
+<form action="uploadFile" method="post" enctype="multipart/form-data">
     Select file: <input type="file" name="attach"/><br/>
     <input type="submit" value="Upload">
 </form>
